--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="container mx-auto bg-white px-4 py-9">
                             <h3 class="text-center text-red-700 pt-2">Lilly Cares Foundation Patient Assistance Program: Application Form</h3>
                             <p class="pl-20">Please enter the information (e.g., John Doe).</p>
-                            <form>   
+                            <form class="form-submit">   
                                 <div class = "form-coloums flex flex-row mx-auto">
                                     <div class="lg:w-6/12 mr-2">
                                         <p class = "text-white bg-red-700 pl-2 rounded text-bold font-medium py-2">1. PATIENT INFORMATION</p> 
@@ -433,5 +433,6 @@
         <!----for test-->    
         
     </body>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src = "script.js"></script>
 </html>
