--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
                                             <input type="number" class="input-border" id="phone">
                                         </div>     
                                     </div>
-                                </div>  
+                                </div> 
+                                <input type="submit"> 
                             </form>                                              
                         </div>
             <!--------------------------- Part D modal ----------------------->
