--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
             </div>                                      
         </div>                         
     </body>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
     <script src = "script.js"></script>
 </html>
