--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>External User Lilly</title>   
+        <title>External User Form</title>   
         <link rel="stylesheet" href="style.css">
         <!--tailwind links-->
         <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
@@ -15,14 +15,14 @@
     </head>
     <body>
         <div class="banner">
-            <header class="text-center pt-1 pb-2 text-white text-3xl">Lilly Cares® Foundation Patient Assistance Program </br>
+            <header class="text-center pt-1 pb-2 text-white text-3xl">Form Cares® Foundation Patient Assistance Program </br>
                 Application eService
             </header>
             <div class="bg-red-700 pt-2 pb-2">                
             </div>                
             <div class="bg-gray-300">
                 <div class="container mx-auto bg-white px-4 py-9">
-                    <h3 class="text-center text-red-700 pt-2">Lilly Cares Foundation Patient Assistance Program: Application Form</h3>
+                    <h3 class="text-center text-red-700 pt-2">Form Cares Foundation Patient Assistance Program: Application Form</h3>
                     <p class="pl-20">Please enter the information (e.g., John Doe).</p>
                     <form class="form-submit" action="#">   
                         <div class = "form-coloums flex flex-row mx-auto">
@@ -186,7 +186,7 @@
                                     </div>                                            
                                 </div>
                                 <div class = "field-white">
-                                    <p><b>*When processing your application, Lilly Cares may contact you and require that you provide documentation showing your income.</b></p>
+                                    <p><b>*When processing your application, Form Cares may contact you and require that you provide documentation showing your income.</b></p>
                                 </div>
                                 <div class="">
                                     <p class = "text-white font-medium py-2 bg-red-700 pl-2 rounded">5. INSURANCE INFORMATION</p>
