--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <header class="text-center pt-1 pb-2 text-white text-3xl">Form Cares® Foundation Patient Assistance Program </br>
                 Application eService
             </header>
-            <div class="bg-red-700 pt-2 pb-2">                
+            <div class="#858585 pt-2 pb-2">                
             </div>                
             <div class="bg-gray-300">
                 <div class="container mx-auto bg-white px-4 py-9">
-                    <h3 class="text-center text-red-700 pt-2">Form Cares Foundation Patient Assistance Program: Application Form</h3>
+                    <h3 class="text-center text-black-700 pt-2">Form Cares Foundation Patient Assistance Program: Application Form</h3>
                     <p class="pl-20">Please enter the information (e.g., John Doe).</p>
                     <form class="form-submit" action="#">   
                         <div class = "form-coloums flex flex-row mx-auto">
                             <div class="lg:w-6/12 mr-2">
-                                <p class = "text-white bg-red-700 pl-2 rounded text-bold font-medium py-2">1. PATIENT INFORMATION</p> 
+                                <p class = "text-white #858585 pl-2 rounded text-bold font-medium py-2">1. PATIENT INFORMATION</p> 
                                 <div class = "field-bg field-white">
                                     <label>Last Name</label>
                                     <div>
@@ -168,7 +168,7 @@
                                     </div>                                            
                                 </div>
                                 <div class="">
-                                    <p class = "text-white font-medium py-2 bg-red-700 pl-2 rounded">3. PATIENT MEDICAL INFORMATION</p>
+                                    <p class = "text-white font-medium py-2 #858585 pl-2 rounded">3. PATIENT MEDICAL INFORMATION</p>
                                 </div>
                                 <div class = "field-white">
                                     <p><i>Please hover/click on <span>i</span> above for more information</i></p>
@@ -189,7 +189,7 @@
                                     <p><b>*When processing your application, Form Cares may contact you and require that you provide documentation showing your income.</b></p>
                                 </div>
                                 <div class="">
-                                    <p class = "text-white font-medium py-2 bg-red-700 pl-2 rounded">5. INSURANCE INFORMATION</p>
+                                    <p class = "text-white font-medium py-2 #858585 pl-2 rounded">5. INSURANCE INFORMATION</p>
                                 </div>
                                 <div>
                                     <p class = "">Do you have insurance?</p>
@@ -241,7 +241,7 @@
                                 </div>
                             </div>                                
                             <div class="lg:w-6/12 ">
-                                <p class = "text-white font-medium py-2 bg-red-700 pl-2 rounded">2. MEDICATION INFORMATION</p>
+                                <p class = "text-white font-medium py-2 #858585 pl-2 rounded">2. MEDICATION INFORMATION</p>
                                 <p>Please select the medication(s) you are requesting:</p>
                                 <div class="Accordian-fields">
                                     <div class="field-white field-expand accordian-tab" >
@@ -370,7 +370,7 @@
                                     </div>
                                 </div>
                                 <div class="">
-                                    <p class = "text-white font-medium py-2 bg-red-700 pl-2 rounded">4. HEALTHCARE PROVIDER INFORMATION</p>
+                                    <p class = "text-white font-medium py-2 #858585 pl-2 rounded">4. HEALTHCARE PROVIDER INFORMATION</p>
                                 </div>
                                 <div class = "field-bg field-white">
                                     <label>Last Name</label>
